# dezztech-backend

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile.dev  README.md  alembic.ini  docker-compose.dev.yaml  pyproject.toml
.cursor/rules/: project-structure.mdc
alembic/: env.py
alembic/versions/: 2026-01-11_create_users_table.py  2026-01-12_create_users_table_with_uuid.py  2026-02-24_update_users_table_to_new_structure.py  2026-02-25_add_email_verification_codes_table.py  2026-02-25_add_password_reset_token_table.py  2026-02-25_add_phone_number_and_how_did_you_hear_to_users.py  2026-02-26_add_pending_email_to_users.py  2026-02-26_add_profile_image_url_to_users.py  2026-02-26_remove_profile_image_url_from_users.py  2026-03-02_add_companies_table.py  2026-03-02_add_company_roles_and_refactor_users_.py  2026-03-02_add_users_companies_table.py  2026-03-02_check.py  2026-03-03_add_company_sectors_table.py
src/: config.py  constants.py  database.py  exceptions.py  logger.py  main.py  models.py  pagination.py  rate_limit.py
src/auth/: config.py  constants.py  dependencies.py  exceptions.py  router.py  schemas.py  service.py  utils.py
src/auth/models/: __init__.py  email_verification_code.py  password_reset_token.py
src/companies/: config.py  constants.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py  utils.py
src/core/security/: password_policy.py
src/users/: constants.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py
