[project]
name = "dezztech-backend"
version = "0.1.0"
description = "Backend API for managing incentive, grant, and support application workflows."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "bcrypt>=4.0.0,<5.0.0",
    "fastapi>=0.128.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "pyjwt>=2.10.1",
    "ruff>=0.14.10",
    "slowapi>=0.1.9",
    "sqlalchemy[asyncio]>=2.0.45",
    "uvicorn[standard]>=0.40.0",
]

[tool.ruff]
# Python versiyonu
target-version = "py313"

# Satır uzunluğu
line-length = 110

# Exclude edilecek klasörler
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "alembic/versions",
    ".pytest_cache",
    ".ruff_cache",
]

[tool.ruff.lint]
# Aktif olacak kurallar
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

# İgnore edilecek kurallar
ignore = [
    "E501",  # line too long (black handles this)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

# Dosya başına ignore
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py files

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
# Black-like formatting
quote-style = "double"
indent-style = "space"
line-ending = "auto"
